[package]
name = "s3-tokio"
version = "0.38.0"
authors = ["FémLol Stúdió <femlol1femlol@gmail.com>", "Aalekh Patel <aalekh.gwpeck.7998@icloud.com>", "Drazen Urch"]
description = "Rust library for working with AWS S3 and compatible object storage APIs"
repository = "https://github.com/FemLolStudio/s3-tokio"
readme = "README.md"
keywords = ["S3", "Wasabi", "Minio", "GCP", "R2"]
license = "MIT"
documentation = "https://docs.rs/s3-tokio/latest/s3/"
edition = "2021"

[lib]
name = "s3"
path = "src/lib.rs"

[[example]]
name = "tokio"
path = "../examples/tokio-backend.rs"

[[example]]
name = "minio"
path = "../examples/minio-tokio.rs"

[[example]]
name = "r2"
path = "../examples/r2-tokio.rs"

[[example]]
name = "google-cloud"
path = "../examples/gcs-tokio.rs"


[dependencies]
femlol-aws-creds = {version = "0.37", default-features = false, features = ["rustls-tls"]}
# femlol-aws-creds = { path = "../aws-creds", default-features = false, features = ["rustls-tls"] }
aws-region = "0.25"
# aws-region = { path = "../aws-region", version = "0.25.4" }
base64 = "0.22"
cfg-if = "1"
time = { version = "0.3", default-features = false, features = ["macros"] }
futures = { version = "0.3", default-features = false }
hex = "0.4"
hmac = "0.12"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.1", default-features = false, features = [
    "client",
    "http1",
    "http2",
    #"stream",
] }
hyper-util = { version = "0.1", default-features = false, features = [
    "client",
    "http1",
    "http2",
    "client-legacy",
    "tokio",
    #"stream",
] }
hyper-rustls = { version = "0.26", default-features = false, features = ["ring", "webpki-roots", "http1", "http2"] }
hyper-timeout = "0.5"
# hyper-tls = { version = "0.6", default-features = false }
rustls = { version = "0.22", default-features = false }
# hyper-native-tls = { version = "0.3", default-features = false }
tracing = { version="0.1", default-features = false }
md5 = "0.7"
percent-encoding = "2"
serde = { version = "1", features = ["derive"]}
quick-xml = { version = "0.31", features = ["serialize"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = [
    "io-util",
    "fs"
], default-features = false }
tokio-util = "0.7"
# tokio-native-tls = { version = "0.3" }
tokio-stream = { version = "0.1", default-features = false }
url = "2"
minidom = { version = "0.15" }
bytes = { version = "1" }
strum_macros = "0.26"

[features]
default = ["fail-on-err"]
no-verify-ssl = []
fail-on-err = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
# async-std = { version = "1", features = ["attributes"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
anyhow = "1"
